Fix FindBugs issue: performance improvements